--- a/Sources/RideHistory/RideHistoryCell.xib
+++ b/Sources/RideHistory/RideHistoryCell.xib
@@ -23,10 +23,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="492" height="335"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="ALn-2I-IYt">
-                                <rect key="frame" x="16" y="8" width="460" height="100"/>
+                                <rect key="frame" x="16" y="8" width="460" height="86.5"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="O12-dP-d9B">
-                                        <rect key="frame" x="0.0" y="9.5" width="432.5" height="81"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="O12-dP-d9B">
+                                        <rect key="frame" x="0.0" y="10.5" width="432.5" height="65"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="uQH-JT-yiF">
                                                 <rect key="frame" x="0.0" y="0.0" width="432.5" height="24"/>
@@ -46,13 +46,13 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="200" verticalHuggingPriority="999" verticalCompressionResistancePriority="999" text="Mercedes Berlins Classe S" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Gcx-VB-0BC" customClass="TappableLabel" customModule="LabelExtension">
-                                                <rect key="frame" x="0.0" y="32" width="432.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="24" width="432.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <color key="textColor" name="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="6VZ-um-ckD">
-                                                <rect key="frame" x="0.0" y="60.5" width="432.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="44.5" width="432.5" height="20.5"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sea-rP-HM8">
                                                         <rect key="frame" x="0.0" y="0.5" width="20" height="20"/>
@@ -73,19 +73,19 @@
                                         </subviews>
                                     </stackView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="900" image="rightArrow" translatesAutoresizingMaskIntoConstraints="NO" id="9dN-w2-YXS">
-                                        <rect key="frame" x="444.5" y="42.5" width="15.5" height="15.5"/>
+                                        <rect key="frame" x="444.5" y="35.5" width="15.5" height="15.5"/>
                                         <color key="tintColor" red="0.34509339929999999" green="0.34509563450000003" blue="0.3451014161" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </imageView>
                                 </subviews>
                             </stackView>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="g9J-jc-LeO">
-                                <rect key="frame" x="16" y="127" width="460" height="199.5"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="g9J-jc-LeO">
+                                <rect key="frame" x="0.0" y="113.5" width="492" height="213"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="g9J-jc-LeO" secondAttribute="height" multiplier="443:192" id="kUW-SP-QdF"/>
                                 </constraints>
                             </mapView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FP1-vp-MoS">
-                                <rect key="frame" x="16" y="127" width="460" height="199.5"/>
+                                <rect key="frame" x="0.0" y="113.5" width="492" height="213"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -94,15 +94,13 @@
                             <constraint firstAttribute="trailing" secondItem="ALn-2I-IYt" secondAttribute="trailing" constant="16" id="GpR-Fr-jOn"/>
                             <constraint firstItem="ALn-2I-IYt" firstAttribute="leading" secondItem="d0R-E1-XYa" secondAttribute="leading" constant="16" id="Odz-UK-i1i"/>
                             <constraint firstItem="FP1-vp-MoS" firstAttribute="trailing" secondItem="g9J-jc-LeO" secondAttribute="trailing" id="UwO-Ti-T3S"/>
-                            <constraint firstItem="g9J-jc-LeO" firstAttribute="leading" secondItem="d0R-E1-XYa" secondAttribute="leading" constant="16" id="Ybp-je-bXU"/>
+                            <constraint firstItem="g9J-jc-LeO" firstAttribute="leading" secondItem="d0R-E1-XYa" secondAttribute="leading" id="Ybp-je-bXU"/>
                             <constraint firstItem="FP1-vp-MoS" firstAttribute="bottom" secondItem="g9J-jc-LeO" secondAttribute="bottom" id="anh-2F-Ttg"/>
                             <constraint firstItem="FP1-vp-MoS" firstAttribute="leading" secondItem="g9J-jc-LeO" secondAttribute="leading" id="b1s-mE-8Ne"/>
-                            <constraint firstAttribute="trailing" secondItem="g9J-jc-LeO" secondAttribute="trailing" constant="16" id="eZU-GJ-pi7"/>
+                            <constraint firstAttribute="trailing" secondItem="g9J-jc-LeO" secondAttribute="trailing" id="eZU-GJ-pi7"/>
                             <constraint firstItem="g9J-jc-LeO" firstAttribute="top" secondItem="ALn-2I-IYt" secondAttribute="bottom" constant="19" id="iCK-j1-7IX"/>
-                            <constraint firstItem="g9J-jc-LeO" firstAttribute="leading" secondItem="d0R-E1-XYa" secondAttribute="leading" constant="16" id="j54-aw-imO"/>
                             <constraint firstItem="FP1-vp-MoS" firstAttribute="top" secondItem="g9J-jc-LeO" secondAttribute="top" id="twt-YJ-K0v"/>
                             <constraint firstAttribute="bottom" secondItem="g9J-jc-LeO" secondAttribute="bottom" constant="8.5" id="ydN-5y-pci"/>
-                            <constraint firstAttribute="trailing" secondItem="g9J-jc-LeO" secondAttribute="trailing" constant="16" id="zhl-Ce-JN9"/>
                         </constraints>
                     </view>
                 </subviews>
