--- a/Sources/RideHistory/RideHistoryCell.xib
+++ b/Sources/RideHistory/RideHistoryCell.xib
@@ -13,32 +13,32 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gQ8-hY-h29" customClass="RideHistoryCell" customModule="RideHistory">
-            <rect key="frame" x="0.0" y="0.0" width="492" height="335"/>
+            <rect key="frame" x="0.0" y="0.0" width="390" height="288"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="6de-q1-4uv">
-                <rect key="frame" x="0.0" y="0.0" width="492" height="335"/>
+                <rect key="frame" x="0.0" y="0.0" width="390" height="288"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d0R-E1-XYa">
-                        <rect key="frame" x="0.0" y="0.0" width="492" height="335"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="288"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="ALn-2I-IYt">
-                                <rect key="frame" x="16" y="8" width="460" height="86.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="999" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="ALn-2I-IYt">
+                                <rect key="frame" x="16" y="20" width="358" height="65"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="O12-dP-d9B">
-                                        <rect key="frame" x="0.0" y="10.5" width="432.5" height="65"/>
+                                        <rect key="frame" x="0.0" y="2" width="330.5" height="61.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="uQH-JT-yiF">
-                                                <rect key="frame" x="0.0" y="0.0" width="432.5" height="24"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="330.5" height="20.5"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Aujourd'hui, 17h45" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AjL-7J-2Gl">
-                                                        <rect key="frame" x="0.0" y="0.0" width="363" height="24"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="999" text="Aujourd'hui, 17h45" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AjL-7J-2Gl">
+                                                        <rect key="frame" x="0.0" y="0.0" width="261" height="20.5"/>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="900" text="23,50€" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Org-rZ-il5">
-                                                        <rect key="frame" x="369" y="0.0" width="63.5" height="24"/>
+                                                        <rect key="frame" x="267" y="0.0" width="63.5" height="20.5"/>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                                         <color key="textColor" name="selectedTitleColor"/>
                                                         <nil key="highlightedColor"/>
@@ -46,16 +46,16 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="200" verticalHuggingPriority="999" verticalCompressionResistancePriority="999" text="Mercedes Berlins Classe S" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Gcx-VB-0BC" customClass="TappableLabel" customModule="LabelExtension">
-                                                <rect key="frame" x="0.0" y="24" width="432.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="20.5" width="330.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <color key="textColor" name="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="6VZ-um-ckD">
-                                                <rect key="frame" x="0.0" y="44.5" width="432.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="41" width="330.5" height="20.5"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sea-rP-HM8">
-                                                        <rect key="frame" x="0.0" y="0.5" width="20" height="20"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                                         <color key="backgroundColor" red="0.34117648010000001" green="0.72156864399999998" blue="0.65098041299999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="05J-AW-Shz"/>
@@ -63,7 +63,7 @@
                                                         </constraints>
                                                     </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="200" verticalHuggingPriority="999" verticalCompressionResistancePriority="999" text="29 rue paradis 13009 Marseille" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="guE-2J-dLi" customClass="TappableLabel" customModule="LabelExtension">
-                                                        <rect key="frame" x="28" y="0.0" width="404.5" height="20.5"/>
+                                                        <rect key="frame" x="28" y="0.0" width="302.5" height="20.5"/>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                         <color key="textColor" name="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -73,24 +73,24 @@
                                         </subviews>
                                     </stackView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="900" image="rightArrow" translatesAutoresizingMaskIntoConstraints="NO" id="9dN-w2-YXS">
-                                        <rect key="frame" x="444.5" y="35.5" width="15.5" height="15.5"/>
+                                        <rect key="frame" x="342.5" y="25" width="15.5" height="15.5"/>
                                         <color key="tintColor" red="0.34509339929999999" green="0.34509563450000003" blue="0.3451014161" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </imageView>
                                 </subviews>
                             </stackView>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="g9J-jc-LeO">
-                                <rect key="frame" x="0.0" y="113.5" width="492" height="213"/>
+                                <rect key="frame" x="0.0" y="93" width="390" height="195"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="g9J-jc-LeO" secondAttribute="height" multiplier="443:192" id="kUW-SP-QdF"/>
+                                    <constraint firstAttribute="width" secondItem="g9J-jc-LeO" secondAttribute="height" multiplier="2" id="kUW-SP-QdF"/>
                                 </constraints>
                             </mapView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FP1-vp-MoS">
-                                <rect key="frame" x="0.0" y="113.5" width="492" height="213"/>
+                                <rect key="frame" x="0.0" y="93" width="390" height="195"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="ALn-2I-IYt" firstAttribute="top" secondItem="d0R-E1-XYa" secondAttribute="top" constant="8" id="GJF-RY-VhJ"/>
+                            <constraint firstItem="ALn-2I-IYt" firstAttribute="top" secondItem="d0R-E1-XYa" secondAttribute="top" constant="20" id="GJF-RY-VhJ"/>
                             <constraint firstAttribute="trailing" secondItem="ALn-2I-IYt" secondAttribute="trailing" constant="16" id="GpR-Fr-jOn"/>
                             <constraint firstItem="ALn-2I-IYt" firstAttribute="leading" secondItem="d0R-E1-XYa" secondAttribute="leading" constant="16" id="Odz-UK-i1i"/>
                             <constraint firstItem="FP1-vp-MoS" firstAttribute="trailing" secondItem="g9J-jc-LeO" secondAttribute="trailing" id="UwO-Ti-T3S"/>
@@ -98,9 +98,9 @@
                             <constraint firstItem="FP1-vp-MoS" firstAttribute="bottom" secondItem="g9J-jc-LeO" secondAttribute="bottom" id="anh-2F-Ttg"/>
                             <constraint firstItem="FP1-vp-MoS" firstAttribute="leading" secondItem="g9J-jc-LeO" secondAttribute="leading" id="b1s-mE-8Ne"/>
                             <constraint firstAttribute="trailing" secondItem="g9J-jc-LeO" secondAttribute="trailing" id="eZU-GJ-pi7"/>
-                            <constraint firstItem="g9J-jc-LeO" firstAttribute="top" secondItem="ALn-2I-IYt" secondAttribute="bottom" constant="19" id="iCK-j1-7IX"/>
+                            <constraint firstItem="g9J-jc-LeO" firstAttribute="top" secondItem="ALn-2I-IYt" secondAttribute="bottom" constant="8" id="iCK-j1-7IX"/>
                             <constraint firstItem="FP1-vp-MoS" firstAttribute="top" secondItem="g9J-jc-LeO" secondAttribute="top" id="twt-YJ-K0v"/>
-                            <constraint firstAttribute="bottom" secondItem="g9J-jc-LeO" secondAttribute="bottom" constant="8.5" id="ydN-5y-pci"/>
+                            <constraint firstAttribute="bottom" secondItem="g9J-jc-LeO" secondAttribute="bottom" id="ydN-5y-pci"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -111,7 +111,7 @@
                     <constraint firstAttribute="trailing" secondItem="d0R-E1-XYa" secondAttribute="trailing" id="xEM-ls-Xzr"/>
                 </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="492" height="334"/>
+            <size key="customSize" width="492" height="287"/>
             <connections>
                 <outlet property="carLabel" destination="Gcx-VB-0BC" id="3Ht-Gy-c7z"/>
                 <outlet property="card" destination="d0R-E1-XYa" id="n7K-9w-Xj6"/>
@@ -122,7 +122,7 @@
                 <outlet property="mapImage" destination="FP1-vp-MoS" id="zyD-L9-ryi"/>
                 <outlet property="priceLabel" destination="Org-rZ-il5" id="wmC-eP-qhj"/>
             </connections>
-            <point key="canvasLocation" x="463.768115942029" y="147.65625"/>
+            <point key="canvasLocation" x="463.768115942029" y="131.25"/>
         </collectionViewCell>
     </objects>
     <resources>
