--- a/Sources/RideHistory/RideHistoryCell.xib
+++ b/Sources/RideHistory/RideHistoryCell.xib
@@ -25,20 +25,20 @@
                             <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="999" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="ALn-2I-IYt">
                                 <rect key="frame" x="16" y="20" width="358" height="65"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="O12-dP-d9B">
-                                        <rect key="frame" x="0.0" y="2" width="330.5" height="61.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="O12-dP-d9B">
+                                        <rect key="frame" x="0.0" y="0.0" width="330.5" height="65"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="uQH-JT-yiF">
-                                                <rect key="frame" x="0.0" y="0.0" width="330.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="330.5" height="18"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="999" text="Aujourd'hui, 17h45" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AjL-7J-2Gl">
-                                                        <rect key="frame" x="0.0" y="0.0" width="261" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="261" height="18"/>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="900" text="23,50€" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Org-rZ-il5">
-                                                        <rect key="frame" x="267" y="0.0" width="63.5" height="20.5"/>
+                                                        <rect key="frame" x="267" y="0.0" width="63.5" height="18"/>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                                         <color key="textColor" name="selectedTitleColor"/>
                                                         <nil key="highlightedColor"/>
@@ -46,16 +46,16 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="200" verticalHuggingPriority="999" verticalCompressionResistancePriority="999" text="Mercedes Berlins Classe S" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Gcx-VB-0BC" customClass="TappableLabel" customModule="LabelExtension">
-                                                <rect key="frame" x="0.0" y="20.5" width="330.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="21" width="330.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <color key="textColor" name="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="6VZ-um-ckD">
-                                                <rect key="frame" x="0.0" y="41" width="330.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="44.5" width="330.5" height="20.5"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sea-rP-HM8">
-                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                        <rect key="frame" x="0.0" y="0.5" width="20" height="20"/>
                                                         <color key="backgroundColor" red="0.34117648010000001" green="0.72156864399999998" blue="0.65098041299999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="05J-AW-Shz"/>
